--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -9,6 +9,7 @@ upstream web{
 
 server {
     listen 0.0.0.0:80;
+    client_max_body_size 1024M;
     
     location / {
         proxy_pass  http://web;
