--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -12,7 +12,7 @@ server {
     client_max_body_size 1024M;
     
     location / {
-        proxy_pass  http://web;
+        proxy_pass  http://ng999/web;
         proxy_http_version 1.1;
 				proxy_set_header Upgrade $http_upgrade;
 				proxy_set_header Connection "Upgrade";
