--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,8 +32,12 @@ services:
     container_name: ng999_web
     image: "ng999:web"
     build: ./web
+#    ports:
+#      - 5000:5000
     expose:
       - 5000
+    volumes:
+      - ./web:/app
     networks:
       - internal
 
