--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -22,12 +22,19 @@ server {
         proxy_set_header   X-Real-IP            $remote_addr;
         proxy_set_header   X-Forwarded-For      $proxy_add_x_forwarded_for;
         proxy_set_header   X-Forwarded-Proto    $scheme;
-    }
 
+        proxy_connect_timeout 3600;
+        proxy_read_timeout 3600;
+        proxy_send_timeout 3600;
+    }
 
 
     location /ng999Restapi/ {
         proxy_pass  http://ng999Restapi/;
+
+        proxy_connect_timeout 3600;
+        proxy_read_timeout 3600;
+        proxy_send_timeout 3600;
     }
 }
 
